--- a/sample-config.env
+++ b/sample-config.env
@@ -3,8 +3,8 @@ THUMB_IMAGE = "https://i.imgur.com/H062oEI.jpeg"
 port = 5000
 email = "sam@secktor.live"
 global_url = "instagram.com"
-OWNER_NAME = "SamPandey001"
-AUTO_REACTION = false
+OWNER_NAME = "sajith nilanka"
+AUTO_REACTION = true
 FAKE_COUNTRY_CODE = 92
 READ_MESSAGE = false
 PREFIX = .
